Delta encoder algorithm implementation. Tests for delta encoder algorithm. Endpoints to compress and decompress. Error handling for illegal data. Disable cors.

--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
     "node": "12.7.x",
     "yarn": "1.17.x"
   },
-  "scripts": {
-    "start:backend": "cd backend && yarn start",
-    "start:frontend": "cd frontend && yarn start"
-  },
   "author": "Tero Kujala <tero.s.kujala@gmail.com>",
   "license": "MIT",
   "private": true,
@@ -19,6 +15,7 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.19.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "prettier": "^1.18.2"
