--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": "12.7.x",
+    "yarn": "1.17.x"
+  },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jest": "^24.9.0",
     "winston": "^3.2.1"
   },
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "test": "jest --passWithNoTests --runInBand"
   }
 }
