Frontend application to compress and decompress strings.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,12 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.7.x",
+    "yarn": "1.17.x"
+  },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
